chore: mark KotlinCompiler as component